Use more eficient Integer.valueOf() instead of 'new Integer'
git-svn-id: https://svn.apache.org/repos/asf/wicket/trunk@1155489 13f79535-47bb-0310-9956-ffa450edef68